# anonyfiles

./: .appveyor.yml  .dockerignore  .env.example  .gitignore  .gitmessage  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.anonyfiles.md  README.md  ROADMAP.md  anonyfiles.bat  anonyfiles.ps1  anonyfiles_api_reference.md  anonyfiles_architecture.md  anonyfiles_cli_reference.md  anonyfiles_config_reference.md  anonyfiles_quickstart.md  commit-msg  compile_requirements.sh  debug_env.py  debug_job_mock.py  default_paths.toml  docker-compose.yml  generate_test_logs.py  guide_installation_anonyfiles.md  input_test.txt  main.py  nixpacks.toml  pyproject.toml  railway.json.example  requirements-full.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  setup.py  (+4 more)
.github/: README.md
.github/workflows/: ci.yml  desktop-build.yml  railway.yml
anonyfiles-api/: api.py
anonyfiles-cli/: README.anonyfiles-cli.md  README.md  cli_config.py  cli_logger.py  config.yaml  config.yaml.sample  custom_rules_test.json  generated_config.yaml  main.py  railway.json  requirements.txt  schema.yaml  test_cmd.py
anonyfiles-cli/anonymizer/: anonyfiles_core.py  anonymizer_core.py  audit.py  base_processor.py  csv_processor.py  deanonymize.py  excel_processor.py  pdf_processor.py  replacer.py  spacy_engine.py  txt_processor.py  word_processor.py
anonyfiles-cli/input_files/: contacts.csv  donnees.xlsx  exemple.csv  exemple.docx  exemple.json  exemple.txt  message.txt  test.docx
anonyfiles-cli/mappings/: input_mapping_20250516-132848.csv  mapping.csv  mapping_csv.csv
anonyfiles-cli/test_outputs_exemple_txt/: exemple_anonymized.txt
anonyfiles-cli/tests/: generate_test_json.py  generate_test_pdf.py  test_csv_processor.py  test_json_processor.py  test_txt_processor.py
anonyfiles-gui/: README.anonyfiles-gui.md  README.md  index.html  package-lock.json  package.json  railway.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1747823884434-7fdef95d5992.mjs
anonyfiles-gui/anonyfiles-gui/: index.html  package-lock.json  package.json  vite.config.ts
anonyfiles-gui/src/: App.svelte  app.css  main.ts  styles.css  svelte.config.js
anonyfiles-gui/src-tauri/: Cargo.toml  anonyfiles_output.txt  tauri.conf.json
anonyfiles-gui/src-tauri/anonyfiles-gui/: package-lock.json  package.json
anonyfiles-gui/src-tauri/anonyfiles-gui/src-tauri/: tauri.conf.json
anonyfiles-gui/src-tauri/capabilities/: default.json
anonyfiles-gui/src-tauri/public/: index.html
anonyfiles-gui/src-tauri/src/: main.rs
anonyfiles_api/: README anonyfiles_api.md  README.md  __main__.py  api.py  auth.py  core_config.py  deanonymize_api.py  job_queue.py  job_utils.py  requirements.txt  retention.py  upload_utils.py
anonyfiles_api/routers/: README.md  anonymization.py  deanonymization.py  files.py  health.py  jobs.py  websocket_status.py
anonyfiles_cli/: README.anonyfiles_cli.md  README.md  cli_logger.py  config.yaml.sample  config_default.yaml  config_test copie.yaml  config_test.yaml  config_test_copie.yaml  config_validator.py  exceptions.py  generated_config.yaml  input.txt  main.py  requirements.txt  test_config.yaml  tui.py  validate_yaml_cerberus.py
anonyfiles_cli/anonymizer/: README.md  anonyfiles_core.py  audit.py  base_processor.py  csv_processor.py  custom_rules_processor.py  deanonymization_engine.py  deanonymize.py  engine.py  excel_processor.py  file_processor_factory.py  file_utils.py  json_processor.py  ner_processor.py  pdf_processor.py  replacement_generator.py  replacer.py  run_logger.py  spacy_engine.py  txt_processor.py  utils.py  word_processor.py  writer.py
anonyfiles_cli/commands/: README.md  __init__.py  anonymize.py  batch.py  clean_job.py  config.py  deanonymize.py  logs.py  utils.py
anonyfiles_cli/handlers/: README.md  __init__.py  anonymize_handler.py  batch_handler.py  deanonymize_handler.py  validation_handler.py
anonyfiles_cli/log_profiles/: apache.yaml  generic_logs.yaml  splunk.yaml  tenable.yaml  tufin.yaml
anonyfiles_cli/managers/: README.md  config_manager.py  path_manager.py  validation_manager.py
anonyfiles_cli/tests/: gen_samples.py
anonyfiles_cli/tui/: __init__.py  logs_app.css  logs_app.py
anonyfiles_cli/ui/: README.md  console_display.py  interactive_mode.py
anonyfiles_cli/utils/: README.md  __init__.py  default_paths.py  system_utils.py
anonyfiles_core/: README.md  __init__.py
anonyfiles_core/anonymizer/: README.md  audit.py  base_processor.py  bundle_handler.py  csv_processor.py  custom_rules_processor.py  deanonymize.py  engine.py  engine_options.py  utils.py  (+17 more)
anonyfiles_gui/: .dockerignore  .env.example  Dockerfile  README.anonyfiles_gui.md  README.md  copy-presets.js  index.html  nano launch_api.sh  nginx.conf  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
anonyfiles_gui/src-tauri/: Cargo.toml  README.md  tauri.conf.json
anonyfiles_gui/src-tauri/capabilities/: default.json
anonyfiles_gui/src-tauri/src/: global.d.ts  main.rs  preset.rs  presets.rs
anonymizer/: csv_processor.py  excel_processor.py  replacer.py  spacy_engine.py  txt_processor.py  word_processor.py
deploy/: README.md  anonyfiles-api.service
docs/: README.md  conf.py  index.rst  modules.rst  request_flow.md
examples/: README.md  test_cmd.py
input_files/: message.txt
logs/: README.md
scripts/: generate_test_logs.py
tests/: README.md  conftest.py  sample.txt
(+127 files in other folders)
