[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "anonyfiles"
version = "0.1.0"
description = "Anonyfiles anonymization tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Anonyfiles"}]

[project.scripts]
anonyfiles-cli = "anonyfiles_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["anonyfiles_*"]

