[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "anonyfiles"
version = "0.1.0"
description = "Anonyfiles anonymization tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Anonyfiles"}]
dependencies = [
    "fastapi>=0.115.6",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "spacy>=3.7.0,<4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "thinc>=8.1.8",
    "python-docx>=1.1.0",
    "faker>=18.0.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "pymupdf>=1.26.0",
    "typer>=0.9.0",
    "yamale>=6.0.0",
    "cerberus>=1.3.0",
    "python-json-logger>=2.0.0",
    "slowapi>=0.1.9",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "chardet>=5.0.0",
    "textual>=0.70.0",
    "python-dateutil>=2.8.0",
    "requests>=2.32.4",
    "urllib3>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff",
    "black",
    "bandit",
    "safety",
    "pip-audit",
    "pypdf",
    "build",
    "types-requests",
    "types-PyYAML"
]

[project.scripts]
anonyfiles-cli = "anonyfiles_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["anonyfiles_*"]
