[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "anonyfiles"
version = "0.1.0"
description = "Anonyfiles anonymization tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Anonyfiles"}]
dependencies = [
    "fastapi>=0.115.6",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "spacy>=3.8.0,<3.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-docx>=1.1.0",
    "faker>=18.0.0",
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "pymupdf>=1.26.0",
    "typer>=0.9.0",
    "yamale>=6.0.0",
    "cerberus>=1.3.0",
    "python-json-logger>=2.0.0",
    "slowapi>=0.1.9",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "chardet>=5.0.0",
    "textual>=0.70.0",
    "python-dateutil>=2.8.0",
    "requests>=2.32.4",
    "urllib3>=2.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio",
    "ruff",
    # Épinglé pour un formatage reproductible (évite la dérive de style quand la
    # CI installe une version plus récente). 26.3.1 corrige aussi CVE-2026-32274.
    "black==26.3.1",
    "bandit",
    "safety",
    "pip-audit",
    "pypdf",
    "build",
    "mypy>=1.10.0",
    "types-requests",
    "types-PyYAML",
    "reportlab"
]
packaging = [
    "pyinstaller>=6.0.0"
]

[project.scripts]
anonyfiles-cli = "anonyfiles_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["anonyfiles_*"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.mypy]
python_version = "3.11"
files = [
    "anonyfiles_core/anonymizer/type_defs.py",
    "anonyfiles_core/anonymizer/base_processor.py",
    "anonyfiles_core/anonymizer/file_processor_factory.py",
    "anonyfiles_core/anonymizer/txt_processor.py",
    "anonyfiles_core/anonymizer/csv_processor.py",
    "anonyfiles_core/anonymizer/json_processor.py",
    "anonyfiles_core/anonymizer/pdf_processor.py",
    "anonyfiles_core/anonymizer/excel_processor.py",
    "anonyfiles_core/anonymizer/word_processor.py",
    "anonyfiles_core/anonymizer/writer.py",
]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true
